@@ -4,22 +4,16 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.Test;
 import org.locationtech.jts.geom.Coordinate;
-import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.GeometryFactory;
 import org.locationtech.jts.geom.LineString;
 import org.locationtech.jts.geom.Polygon;
 
 import fi.nls.hakunapi.cql2.function.Function;
 import fi.nls.hakunapi.cql2.function.FunctionTable;
-import fi.nls.hakunapi.cql2.model.function.FunctionCall;
-import fi.nls.hakunapi.cql2.model.literal.NumberLiteral;
-import fi.nls.hakunapi.cql2.model.literal.StringLiteral;
-import fi.nls.hakunapi.cql2.model.spatial.SpatialLiteral;
 
 public class TestGeometryFunctionsFactory {
 
@@ -31,15 +25,13 @@ public class TestGeometryFunctionsFactory {
         List<FunctionTable> functionTables = factory.createFunctionTables();
 
         assertEquals(functionTables.size(), 1);
-        Function buffer = functionTables.get(0).getFunction("Buffer");
+        Function<?> buffer = functionTables.get(0).getFunction("Buffer");
         assertNotNull(buffer);
 
         LineString geomFrom = geomFactory
                 .createLineString(new Coordinate[] { new Coordinate(0, 0), new Coordinate(1, 1) });
 
-        FunctionCall functionCall = new FunctionCall("Buffer",
-                Arrays.asList(new SpatialLiteral(geomFrom), new NumberLiteral(1)));
-        Object rv = buffer.visit(functionCall);
+        Object rv = buffer.invoke(List.of(geomFrom, 1), null);
 
         assertNotNull(rv);
         assertTrue(rv instanceof Polygon);
@@ -53,15 +45,13 @@ public class TestGeometryFunctionsFactory {
         List<FunctionTable> functionTables = factory.createFunctionTables();
 
         assertEquals(functionTables.size(), 1);
-        Function st_buffer = functionTables.get(0).getFunction("ST_Buffer");
+        Function<?> st_buffer = functionTables.get(0).getFunction("ST_Buffer");
         assertNotNull(st_buffer);
 
         LineString geomFrom = geomFactory
                 .createLineString(new Coordinate[] { new Coordinate(0, 0), new Coordinate(1, 1) });
 
-        FunctionCall functionCall = new FunctionCall("ST_Buffer",
-                Arrays.asList(new SpatialLiteral(geomFrom), new NumberLiteral(1), new StringLiteral("")));
-        Object rv = st_buffer.visit(functionCall);
+        Object rv = st_buffer.invoke(List.of(geomFrom, 1, ""), null);
 
         assertNotNull(rv);
         assertTrue(rv instanceof Polygon);
@@ -75,17 +65,13 @@ public class TestGeometryFunctionsFactory {
         List<FunctionTable> functionTables = factory.createFunctionTables();
 
         assertEquals(functionTables.size(), 1);
-        Function st_buffer = functionTables.get(0).getFunction("ST_Buffer");
+        Function<?> st_buffer = functionTables.get(0).getFunction("ST_Buffer");
         assertNotNull(st_buffer);
 
         LineString geomFrom = geomFactory
                 .createLineString(new Coordinate[] { new Coordinate(0, 0), new Coordinate(1, 1) });
 
-        FunctionCall functionCall = new FunctionCall("ST_Buffer",
-                Arrays.asList(new SpatialLiteral(geomFrom), new NumberLiteral(1), 
-                        //
-                        new StringLiteral("join=miter")));
-        Object rv = st_buffer.visit(functionCall);
+        Object rv = st_buffer.invoke(List.of(geomFrom, 1, "join=miter"), null);
 
         assertNotNull(rv);
         assertTrue(rv instanceof Polygon);
